--- a/hype/07-servo/servo.hype/data.plist
+++ b/hype/07-servo/servo.hype/data.plist
@@ -7,7 +7,7 @@
 	<key>createOfflineApplicationCache</key>
 	<true/>
 	<key>currentScene</key>
-	<string>196</string>
+	<string>56</string>
 	<key>displayedAttributes</key>
 	<array>
 		<string>kPropertiesMenuItemIdentifierOpacity</string>
@@ -77,7 +77,7 @@
 
 	</string>
 	<key>lastCheckDate</key>
-	<date>2014-03-11T10:13:06Z</date>
+	<date>2014-03-11T10:22:22Z</date>
 	<key>layout</key>
 	<dict>
 		<key>keyframeTimelineHeight</key>
@@ -4501,7 +4501,7 @@
 							<key>identifier</key>
 							<string>InnerHTML</string>
 							<key>objectValue</key>
-							<string>For this circuit you will&lt;div&gt;need a Servo Motor and&lt;/div&gt;&lt;div&gt;three jumper wires.&lt;/div&gt;</string>
+							<string>For this circuit you will&lt;div&gt;need a servo motor and&lt;/div&gt;&lt;div&gt;three jumper wires.&lt;/div&gt;</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -4794,7 +4794,7 @@
 				<key>timeCursors</key>
 				<dict>
 					<key>kTimelineDefaultIdentifier</key>
-					<real>2.7333333492279053</real>
+					<real>0.0</real>
 				</dict>
 				<key>timescale</key>
 				<integer>60</integer>
